# bachuan

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  RTSP_PLAN.md  claude.md
src/: dashboard_main.cpp  main.cpp
src/client/: README.md  auth.cpp  auth.h  connection.cpp  connection.h  stream.cpp  stream.h
src/control/: command_server.cpp  command_server.h
src/mjpeg/: README.md  mjpeg_source.cpp  mjpeg_source.h
src/protocol/: README.md  bc_crypto.cpp  bc_crypto.h  bc_header.cpp  bc_header.h  bc_media.cpp  bc_media.h  bc_xml.cpp  bc_xml.h
src/rtsp/: README.md  rtsp_source.cpp  rtsp_source.h
src/utils/: README.md  json_config.h  logger.cpp  logger.h  md5.cpp  md5.h
src/video/: README.md  dashboard_display.cpp  dashboard_display.h  decoder.cpp  decoder.h  display.cpp  display.h  video_source.h  writer.cpp  writer.h
